fixed question layout on mobile

--- a/app.css
+++ b/app.css
@@ -309,7 +309,7 @@ progress {color: #d21242;}
     }
     
   tbody tr td:nth-child(1) {
-    height: 100px;
+    height: 150px;
     font-weight: 500;
     font-size: 2.5em;
   }
@@ -332,7 +332,7 @@ progress {color: #d21242;}
       float: left;
       font-weight: bold;
       text-transform: uppercase;
-      padding: 0px 16px 5px 0px;
+      padding: 0px 196px 65px 0px;
     }
     
     table td:last-child {
